SIXTH-63 // Fixed firefox table border not showing properly

--- a/src/component/PDPSizeGuide/PDPSizeGuide.style.scss
+++ b/src/component/PDPSizeGuide/PDPSizeGuide.style.scss
@@ -167,7 +167,6 @@
             width: 100%;
             overflow-y: scroll;
             padding-right: 6%;
-            padding-left: 1.5%;
 
             &_isArabic {
                 padding-right: 0px;
